# sample-poetry-app

./: .gitignore  README.md  pyproject.toml  requirements.txt
poetry_demo/: demo.py
src/greet/: location.py
tests/: test_greet.py
